Grammars/DungeonMap/DungeonMapParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DungeonMap.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

#pragma warning disable 3021
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class DungeonMapParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		INITROOM=1, ENTRY=2, EXIT=3, DIRECTION=4, ROOM=5, INT=6, NEWLINE=7, WS=8;
	public const int
		RULE_prog = 0, RULE_elem = 1, RULE_createInitialRoom = 2, RULE_createFirstCorrSect = 3, 
		RULE_createSecondCorrSect = 4, RULE_createRoom = 5;
	public static readonly string[] ruleNames = {
		"prog", "elem", "createInitialRoom", "createFirstCorrSect", "createSecondCorrSect", 
		"createRoom"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'r'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INITROOM", "ENTRY", "EXIT", "DIRECTION", "ROOM", "INT", "NEWLINE", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DungeonMap.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DungeonMapParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


		public DungeonCompiler Compiler = new DungeonCompiler(); //specific compiler file in the Unity project

		public DungeonMapParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DungeonMapParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public ElemContext[] elem() {
			return GetRuleContexts<ElemContext>();
		}
		public ElemContext elem(int i) {
			return GetRuleContext<ElemContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 13;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 12; elem();
				}
				}
				State = 15;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INITROOM) | (1L << ENTRY) | (1L << EXIT) | (1L << DIRECTION))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElemContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(DungeonMapParser.NEWLINE, 0); }
		public CreateInitialRoomContext createInitialRoom() {
			return GetRuleContext<CreateInitialRoomContext>(0);
		}
		public CreateFirstCorrSectContext createFirstCorrSect() {
			return GetRuleContext<CreateFirstCorrSectContext>(0);
		}
		public CreateSecondCorrSectContext createSecondCorrSect() {
			return GetRuleContext<CreateSecondCorrSectContext>(0);
		}
		public CreateRoomContext createRoom() {
			return GetRuleContext<CreateRoomContext>(0);
		}
		public ElemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterElem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitElem(this);
		}
	}

	[RuleVersion(0)]
	public ElemContext elem() {
		ElemContext _localctx = new ElemContext(Context, State);
		EnterRule(_localctx, 2, RULE_elem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INITROOM:
				{
				State = 17; createInitialRoom();
				}
				break;
			case ENTRY:
				{
				State = 18; createFirstCorrSect();
				}
				break;
			case DIRECTION:
				{
				State = 19; createSecondCorrSect();
				}
				break;
			case EXIT:
				{
				State = 20; createRoom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 23; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateInitialRoomContext : ParserRuleContext {
		public IToken _EXIT;
		public ITerminalNode INITROOM() { return GetToken(DungeonMapParser.INITROOM, 0); }
		public ITerminalNode EXIT() { return GetToken(DungeonMapParser.EXIT, 0); }
		public CreateInitialRoomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createInitialRoom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterCreateInitialRoom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitCreateInitialRoom(this);
		}
	}

	[RuleVersion(0)]
	public CreateInitialRoomContext createInitialRoom() {
		CreateInitialRoomContext _localctx = new CreateInitialRoomContext(Context, State);
		EnterRule(_localctx, 4, RULE_createInitialRoom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25; Match(INITROOM);
			State = 26; _localctx._EXIT = Match(EXIT);
			 Compiler.CreateInitialRoom((_localctx._EXIT!=null?_localctx._EXIT.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateFirstCorrSectContext : ParserRuleContext {
		public IToken _ENTRY;
		public IToken _DIRECTION;
		public ITerminalNode ENTRY() { return GetToken(DungeonMapParser.ENTRY, 0); }
		public ITerminalNode DIRECTION() { return GetToken(DungeonMapParser.DIRECTION, 0); }
		public CreateFirstCorrSectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createFirstCorrSect; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterCreateFirstCorrSect(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitCreateFirstCorrSect(this);
		}
	}

	[RuleVersion(0)]
	public CreateFirstCorrSectContext createFirstCorrSect() {
		CreateFirstCorrSectContext _localctx = new CreateFirstCorrSectContext(Context, State);
		EnterRule(_localctx, 6, RULE_createFirstCorrSect);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29; _localctx._ENTRY = Match(ENTRY);
			State = 30; _localctx._DIRECTION = Match(DIRECTION);
			 Compiler.CreateFirstPiece((_localctx._ENTRY!=null?_localctx._ENTRY.Text:null), (_localctx._DIRECTION!=null?_localctx._DIRECTION.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateSecondCorrSectContext : ParserRuleContext {
		public IToken _DIRECTION;
		public IToken _EXIT;
		public ITerminalNode DIRECTION() { return GetToken(DungeonMapParser.DIRECTION, 0); }
		public ITerminalNode EXIT() { return GetToken(DungeonMapParser.EXIT, 0); }
		public CreateSecondCorrSectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createSecondCorrSect; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterCreateSecondCorrSect(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitCreateSecondCorrSect(this);
		}
	}

	[RuleVersion(0)]
	public CreateSecondCorrSectContext createSecondCorrSect() {
		CreateSecondCorrSectContext _localctx = new CreateSecondCorrSectContext(Context, State);
		EnterRule(_localctx, 8, RULE_createSecondCorrSect);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33; _localctx._DIRECTION = Match(DIRECTION);
			State = 34; _localctx._EXIT = Match(EXIT);
			 Compiler.CreateSecondPiece((_localctx._DIRECTION!=null?_localctx._DIRECTION.Text:null), (_localctx._EXIT!=null?_localctx._EXIT.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateRoomContext : ParserRuleContext {
		public IToken _EXIT;
		public IToken _ENTRY;
		public ITerminalNode EXIT() { return GetToken(DungeonMapParser.EXIT, 0); }
		public ITerminalNode ROOM() { return GetToken(DungeonMapParser.ROOM, 0); }
		public ITerminalNode ENTRY() { return GetToken(DungeonMapParser.ENTRY, 0); }
		public CreateRoomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createRoom; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.EnterCreateRoom(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDungeonMapListener typedListener = listener as IDungeonMapListener;
			if (typedListener != null) typedListener.ExitCreateRoom(this);
		}
	}

	[RuleVersion(0)]
	public CreateRoomContext createRoom() {
		CreateRoomContext _localctx = new CreateRoomContext(Context, State);
		EnterRule(_localctx, 10, RULE_createRoom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37; _localctx._EXIT = Match(EXIT);
			State = 38; Match(ROOM);
			State = 39; _localctx._ENTRY = Match(ENTRY);
			 Compiler.CreateRoom((_localctx._EXIT!=null?_localctx._EXIT.Text:null), (_localctx._ENTRY!=null?_localctx._ENTRY.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
